# CDNMF

./: .gitignore  README.md  benchmark_models.py  best_params_optuna_citeseer.json  best_params_optuna_cora.json  best_params_optuna_pubmed.json  generate_pretrain_cache.py  pyproject.toml  script_citeseer.py  script_cora.py  script_optuna.py  script_pubmed.py
Model/: my_model.py  my_model_opt_loss.py
report/: report.tex
report/report/: report.aux  report.fdb_latexmk  report.fls  report.out  report.tex
report/template/: nips_2017.aux  nips_2017.fdb_latexmk  nips_2017.fls  nips_2017.out
