[project]
name = "cdnmf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib==3.8.0",
    "networkx==3.1",
    "numpy==1.25.2",
    "optuna>=4.6.0",
    "scikit-learn==1.3.0",
    "scipy==1.11.4",
    "torch==2.0.1",
    "tqdm==4.66.1",
]
